# deepgene-plugins

./: SCOUTED.md  style-guide.md
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/_drafts/: adopt-pubmed-database.md  fork-draft-outreach.md
agents/: README.md
artifacts/: vcep-tracker.html
commands/: README.md
context/: README.md
hooks/: README.md
mcp/: README.md
output-styles/: dgai-voice.md
plugins/: README.md
plugins/dgai-clingen/: .mcp.json  README.md
plugins/dgai-clingen/.claude-plugin/: plugin.json
plugins/dgai-clingen/mcp/: pyproject.toml
plugins/dgai-clingen/mcp/clingen/: __init__.py  client.py  server.py
plugins/dgai-clingen/tests/: conftest.py  test_clingen_tools.py
plugins/dgai-clingen/tests/cassettes/: test_list_chairs_for_known_panel.yaml  test_lookup_panel_by_affiliation_id.yaml  test_lookup_panel_by_gene_symbol_otc.yaml  test_lookup_panel_unknown_identifier.yaml
plugins/dgai-hello/.claude-plugin/: plugin.json
plugins/dgai-hello/commands/: dgai-hello.md
plugins/dgai-hello/skills/dgai-hello/: SKILL.md
plugins/dgai-hello/skills/dgai-hello-check/: SKILL.md
plugins/dgai-instrumentation/.claude-plugin/: plugin.json
plugins/dgai-instrumentation/hooks/: post-skill-log.py
plugins/invocation-log/.claude-plugin/: plugin.json
plugins/invocation-log/hooks/: hooks.json
plugins/outreach/skills/outreach-research/: SKILL.md
scripts/: README.md  statusline.sh
skills/: README.md
