[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dgai-clingen-mcp"
version = "0.1.0"
description = "MCP server exposing ClinGen panel lookups via the public CSpec Registry."
readme = "../README.md"
requires-python = ">=3.10"
authors = [{ name = "Abby Hatch", email = "abby@deepgene.us" }]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-vcr>=1.0.2",
  "vcrpy>=6.0",
]

[project.scripts]
clingen-mcp = "clingen.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clingen*"]
